# tap-qalyptus

./: README.md  plan.md  pyproject.toml
docs/: live-api-spike.md
tap_qalyptus/: __init__.py  __main__.py  client.py  schemas.py  tap.py
tap_qalyptus/streams/: __init__.py  child.py  top_level.py
tests/: test_tap.py
tests/fixtures/: reports_wrapped.json  task_report_detail.json  template_items.json  users.json
